--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -211,3 +211,17 @@ input[type="checkbox"]:checked:before {
 .panel-heading.preview img{  
   width: 100%;
 }
+
+.amenities {
+  margin-bottom: 10px;
+  list-style-type: none;
+}
+
+.text-line-through {
+  text-decoration: line-through;
+}
+
+
+
+
+
