--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -212,16 +212,29 @@ input[type="checkbox"]:checked:before {
   width: 100%;
 }
 
-.amenities {
+.amenities li {
   margin-bottom: 10px;
   list-style-type: none;
 }
 
 .text-line-through {
-  text-decoration: line-through;
+  text-decoration: line-through
 }
 
+.reservation-table td {
+  width: 100%;
+  border: 1px solid #dce0e0;
+  padding: 10px;
+}
 
+.wide {
+  width: 100%;
+}
 
-
-
+.price_tag {
+  background-color: #606567;
+  color: #fff;
+  font-size: 20px;
+  padding: 10px;
+  margin-bottom: 10px;
+}
